win32.h: set floating point precision for pow()

* include/ruby/win32.h (rb_w32_pow): set floating point precision
  for mingw-w64 x86 pow(). This improves the precision of pow() on
  Windows XP for TestFloat#test_round_with_precision failure.
  [ruby-core:47911] [Bug #7142]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37168 b2dd03c8-39d4-4d8f-98ff-823fe69b080e